2007-02-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: set default out encoding to utf8. This could
	help with translations.
	* Makefile.am, manage_i18n.pl.in: add japanese translations, 
	from fedora.

2007-01-08  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: correctly set node filenames even if NODE_FILES
	isn't set.
	Handle right 2 @def-like commands on a line.
	Collect split and mono entry in htmlxref.cnf.
	* texi2html.init: take into account when a target is split
	in crossref. When there is a split and a mono entry, chose
	based on split.
	* examples/book.init: update to new use of directions.
	* Tests/*: new tests for htmlxref.cnf file use.
	New test for double @deffn on the same line.
	* */Makefile.in, aclocal.m4, configure: use automake 1.10 and
	autoconf 2.61.

2006-08-06  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: accept - in @-command names.
	ignore @allow-recursion and @quote-arg.
	In macro args parsing, a comma in brace is protected.
	Rewrite index names handling to be simpler and
	accept more than one prefix for an index name. The main 
	hash has now index names as key instead of prefixes.
	* Tests/*: add the tar manual.
	add macros/quote-args.txi from the makeinfo test suite.

2006-08-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: use the same code for file 
	name determination with NODE_FILES than with the traditional 
	scheme. node_file_name is now used only to change the node 
	file name, not for the determination of the html page file 
	name anymore.
	With this change the top file isn't necessarily index.html, 
	even if it is the node_file_name it is index.html only if 
	explicitly set.
	* texi2html.pl: simplify index handling code.
	when NODE_FILES is true, use the node file name for the html
	files whenever possible.
	* Tests/*: Regenerate
	* NEWS, doc/*: document the api node_file_name api change

2006-08-04  Patrice Dumas  <dumas@centre-cired.fr>
