@@ -27,7 +27,7 @@ texi2html.html: texi2html.texi $(srcdir)/version.texi \
   $(top_srcdir)/MySimple.pm $(top_srcdir)/T2h_i18n.pm
 	TEXINPUTS=$(srcdir)::$$TEXINPUTS T2H_HOME=$(top_srcdir) \
 	  $(SHELL) $(top_srcdir)/missing-texi2html --run \
-	    $(PERL) $(top_srcdir)/texi2html.pl -V $<
+	    $(PERL) -x $(top_srcdir)/texi2html.pl -V $<
 
 $(TEXI2HTML):
 	@(cd $(top_builddir) && make texi2html)
